--- a/_our-programmes/Gallery/2022.md
+++ b/_our-programmes/Gallery/2022.md
@@ -4,4 +4,6 @@ permalink: /what-we-do/Gallery/2022
 description: ""
 third_nav_title: Gallery
 ---
-
+## Launch of CDC Vouchers Scheme 2022
+![Launch of CDC Vouchers Scheme 2022]()
+![Launch of CDC Vouchers Scheme 2022](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202022/DSC_9655.jpg)
