--- a/_our-programmes/Gallery/2022.md
+++ b/_our-programmes/Gallery/2022.md
@@ -5,5 +5,5 @@ description: ""
 third_nav_title: Gallery
 ---
 ## Launch of CDC Vouchers Scheme 2022
-![Launch of CDC Vouchers Scheme 2022]()
+![Launch of CDC Vouchers Scheme 2022](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202022/DSC_9113.jpg)<br>
 ![Launch of CDC Vouchers Scheme 2022](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202022/DSC_9655.jpg)
