--- a/_our-programmes/Gallery/2021.md
+++ b/_our-programmes/Gallery/2021.md
@@ -4,3 +4,13 @@ permalink: /our-programmes/Gallery/2021
 description: ""
 third_nav_title: Gallery
 ---
+## Launch of CDC Vouchers Scheme 2021
+![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9999.jpg)
+![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9802.jpg)
+
+## Launch of CDC Vouchers Scheme (Tranche 2)
+![Launch of CDC Vouchers Scheme (Tranche 2)](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%20(T2)/decal.jpg)
+![Launch of CDC Vouchers Scheme (Tranche 2)](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%20(T2)/ffff0243.jpg)
+![Launch of CDC Vouchers Scheme (Tranche 2)](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%20(T2)/ffff0298.jpg)
+![Launch of CDC Vouchers Scheme (Tranche 2)](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%20(T2)/img_00558c742f2af09c4b95a4fc3ef19e60272d.jpg)
+![Launch of CDC Vouchers Scheme (Tranche 2)](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%20(T2)/img_0097.jpg)
