--- a/_our-programmes/Gallery/2021.md
+++ b/_our-programmes/Gallery/2021.md
@@ -8,6 +8,14 @@ third_nav_title: Gallery
 ![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9999.jpg)
 ![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9802.jpg)
 
+## WeCare Arts Exhibition 2021
+![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(112).jpg)
+![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(22).jpg)
+![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(53).jpg)
+![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(74).jpg)
+![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(90).jpg)
+![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(99).jpg)
+
 ## Launch of CDC Vouchers Scheme (Tranche 2)
 ![Launch of CDC Vouchers Scheme (Tranche 2)](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%20(T2)/decal.jpg)
 ![Launch of CDC Vouchers Scheme (Tranche 2)](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%20(T2)/ffff0243.jpg)
