--- a/_our-programmes/Gallery/2020.md
+++ b/_our-programmes/Gallery/2020.md
@@ -4,3 +4,8 @@ permalink: /our-programmes/Gallery/2020
 description: ""
 third_nav_title: Gallery
 ---
+## Swearing-in Ceremony of Mayors 2020
+![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/11.jpg)
+![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/14.jpg)![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/13.jpg)
+![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/16.jpg)![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/18.jpg)
+![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/121.jpg)![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/10.jpg)![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/111.jpg)![Swearing in ceremony of mayors 2020](/images/CDC%20Gallery/Swearing%20In%20of%20Mayors%202020/19.jpg)
