--- a/_our-programmes/Gallery/2019.md
+++ b/_our-programmes/Gallery/2019.md
@@ -4,4 +4,11 @@ permalink: /our-programmes/Gallery/2019
 description: ""
 third_nav_title: Gallery
 ---
+## WeCare Arts Exhibition 2019
+![WECARE ARTS 2019](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202019/wecare-arts-(1).jpg)
+![WECARE ARTS 2019](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202019/wecare-arts-(2).jpg)
+![WECARE ARTS 2019](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202019/wecare-arts-(3).jpg)
+![WECARE ARTS 2019](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202019/wecare-arts-(4).jpg)
+## Law Awareness Weeks@CDC 2019
 
+## Capitaland Cares@CDC 2019
