--- a/_our-programmes/Gallery/2019.md
+++ b/_our-programmes/Gallery/2019.md
@@ -10,5 +10,9 @@ third_nav_title: Gallery
 ![WECARE ARTS 2019](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202019/wecare-arts-(3).jpg)
 ![WECARE ARTS 2019](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202019/wecare-arts-(4).jpg)
 ## Law Awareness Weeks@CDC 2019
+![LAW@CDC2019](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202019/law@cdc-2019-group-photo.jpg)
+![LAW@CDC2019](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202019/law@cdc-2019-guests.jpg)
+![LAW@CDC2019](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202019/law@cdc-2019-mass-stage-photo.jpg)
+![LAW@CDC2019](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202019/law@cdc-2019-reception.jpg)
 
 ## Capitaland Cares@CDC 2019
