--- a/_our-programmes/Gallery/2019.md
+++ b/_our-programmes/Gallery/2019.md
@@ -16,3 +16,7 @@ third_nav_title: Gallery
 ![LAW@CDC2019](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202019/law@cdc-2019-reception.jpg)
 
 ## Capitaland Cares@CDC 2019
+![Capitaland Cares@CDC 2019](/images/CDC%20Gallery/Capitaland%20Cares@CDC%202019/capitaland-cares-@-cdc-canopy.jpg)
+![Capitaland Cares@CDC 2019](/images/CDC%20Gallery/Capitaland%20Cares@CDC%202019/capitaland-cares-@-cdc-mass-photo.jpg)![Capitaland Cares@CDC 2019](/images/CDC%20Gallery/Capitaland%20Cares@CDC%202019/capitaland-cares-@-cdc-mass-workout.jpg)
+![Capitaland Cares@CDC 2019](/images/CDC%20Gallery/Capitaland%20Cares@CDC%202019/capitaland-cares-@-cdc-vortex.jpg)
+![Capitaland Cares@CDC 2019](/images/CDC%20Gallery/Capitaland%20Cares@CDC%202019/capitaland-cares-@-cdc-with-chf.jpg)
