--- a/_our-programmes/Gallery/2018.md
+++ b/_our-programmes/Gallery/2018.md
@@ -4,3 +4,8 @@ permalink: /our-programmes/Gallery/2018
 description: ""
 third_nav_title: Gallery
 ---
+## Law Awareness Weeks@CDC 2018
+
+## Capitaland Young Architect Programme@CDC 2018
+
+## Maybank Family Fund@CDC 2018
