--- a/_our-programmes/Gallery/2018.md
+++ b/_our-programmes/Gallery/2018.md
@@ -5,7 +5,14 @@ description: ""
 third_nav_title: Gallery
 ---
 ## Law Awareness Weeks@CDC 2018
-
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_week_mr_14-min.jpg)
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_week_mr_15-min.jpg)
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_week_mr_17-min.jpg)
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_week_mr_7-min.jpg)![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_weeks_lr_101-min.jpg)
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_weeks_lr_108-min.jpg)
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_weeks_lr_164-min.jpg)
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_weeks_lr_206-min.jpg)
+![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_weeks_lr_95-min.jpg)
 ## Capitaland Young Architect Programme@CDC 2018
 
 ## Maybank Family Fund@CDC 2018
