--- a/_our-programmes/Gallery/2018.md
+++ b/_our-programmes/Gallery/2018.md
@@ -19,3 +19,6 @@ third_nav_title: Gallery
 ![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img043-min.jpg)
 ![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img073-min.jpg)![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img085-min.jpg)
 ## Maybank Family Fund@CDC 2018
+![ Maybank Family Fund@CDC 2018](/images/CDC%20Gallery/Maybank%20Family%20Fund%202018/maybank-1-wide-min.jpg)
+![ Maybank Family Fund@CDC 2018](/images/CDC%20Gallery/Maybank%20Family%20Fund%202018/maybank-2-wide-min.jpg)
+![ Maybank Family Fund@CDC 2018](/images/CDC%20Gallery/Maybank%20Family%20Fund%202018/maybank-4-wide-min.jpg)
