--- a/_our-programmes/Gallery/2018.md
+++ b/_our-programmes/Gallery/2018.md
@@ -4,7 +4,7 @@ permalink: /our-programmes/Gallery/2018
 description: ""
 third_nav_title: Gallery
 ---
-![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img215---wide.jpg)## Law Awareness Weeks@CDC 2018
+## Law Awareness Weeks@CDC 2018
 ![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_week_mr_14-min.jpg)
 ![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_week_mr_15-min.jpg)
 ![law@cdc 2018](/images/CDC%20Gallery/Law%20Awareness%20Weeks%202018/secdc_launch_law_awareness_week_mr_17-min.jpg)
@@ -18,6 +18,7 @@ third_nav_title: Gallery
 ![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/355-min.jpg)
 ![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img043-min.jpg)
 ![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img073-min.jpg)![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img085-min.jpg)
+![Capitaland Young Architect Programme@CDC 2018](/images/CDC%20Gallery/Capitaland%20YAP%202018/img215---wide.jpg)
 ## Maybank Family Fund@CDC 2018
 ![ Maybank Family Fund@CDC 2018](/images/CDC%20Gallery/Maybank%20Family%20Fund%202018/maybank-1-wide-min.jpg)
 ![ Maybank Family Fund@CDC 2018](/images/CDC%20Gallery/Maybank%20Family%20Fund%202018/maybank-2-wide-min.jpg)
