--- a/_our-programmes/Gallery/2021.md
+++ b/_our-programmes/Gallery/2021.md
@@ -7,6 +7,8 @@ third_nav_title: Gallery
 ## Launch of CDC Vouchers Scheme 2021
 ![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9999.jpg)
 ![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9802.jpg)
+![](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9802.jpg)
+![](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9999.jpg)
 
 ## WeCare Arts Exhibition 2021
 ![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(112).jpg)
