--- a/_our-programmes/Gallery/2021.md
+++ b/_our-programmes/Gallery/2021.md
@@ -11,6 +11,8 @@ third_nav_title: Gallery
 ![](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9999.jpg)
 test
 
+## Law Awareness Weeks@CDC 2021
+![law@cdc 2021](/images/Common%20Flagship%20Progs/law%20awareness%20weeks.png)
 ## WeCare Arts Exhibition 2021
 ![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(112).jpg)
 ![wecare arts exhibition 2021](/images/CDC%20Gallery/WeCare%20Arts%20Exhibition%202021/img-(22).jpg)
