--- a/_our-programmes/Gallery/2021.md
+++ b/_our-programmes/Gallery/2021.md
@@ -5,12 +5,8 @@ description: ""
 third_nav_title: Gallery
 ---
 ## Launch of CDC Vouchers Scheme 2021
-![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9999.jpg)
-![Launch of CDC Vouchers Scheme 2021](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9802.jpg)
-![](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9802.jpg)
-![](/images/CDC%20Gallery/CDC%20Vouchers%20Scheme%202021/_CCC9999.jpg)
-test
-
+![cdcv 2021](/images/_CCC9999.jpg)
+![cdcv2021](/images/_CCC9802.jpg)
 ## Law Awareness Weeks@CDC 2021
 ![law@cdc 2021](/images/Common%20Flagship%20Progs/law%20awareness%20weeks.png)
 ## WeCare Arts Exhibition 2021
