--- a/_our-programmes/Gallery/2023.md
+++ b/_our-programmes/Gallery/2023.md
@@ -4,3 +4,8 @@ permalink: /what-we-do/Gallery/2023/
 description: ""
 third_nav_title: Gallery
 ---
+## Launch of CDC Vouchers Scheme 2023
+
+![CDCV 2023 Launch](/images/CDC%20Gallery/CDCV2023%20-%201.jpg)
+![CDCV 2023 Launch 2](/images/CDC%20Gallery/CDCV2023%20-%202.jpg)
+![CDCV 2023 Launch 3](/images/CDC%20Gallery/CDCV2023%20-%203.jpg)
