{"message":"Update file: 2023.md","userId":"93","fileName":"2023.md"}

--- a/_our-programmes/Gallery/2023.md
+++ b/_our-programmes/Gallery/2023.md
@@ -4,6 +4,13 @@ permalink: /what-we-do/gallery/2023/
 description: ""
 third_nav_title: Gallery
 ---
+## Launch of Law Awareness Weeks @ CDC 2023
+![](/images/Common%20Flagship%20Progs/photo%201.JPG)
+![](/images/photo%202%20-%20lawaw.JPG)
+![](/images/photo%203.JPG)
+![](/images/photo%204.JPG)
+
+
 ## Launch of CDC Vouchers Scheme 2023
 
 ![CDCV 2023 Launch](/images/CDC%20Gallery/CDCV2023%20-%201.jpg)
