{"message":"Update file: 2024.md","userId":"93","fileName":"2024.md"}

--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -1,10 +1,26 @@
 ---
 title: "2024"
 permalink: /our-programmes/gallery/2024/
-variant: markdown
+variant: tiptap
 description: ""
 third_nav_title: Gallery
 ---
+<h2>Launch of Law Awareness Weeks @ CDC</h2>
+<h2>Launch of ArtsEverywhere@CDC</h2>
+<h2>Launch of CDC Vouchers Scheme 2024 (June)</h2>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/5.jpg">
+</div>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/3.jpg">
+</div>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/2.jpg">
+</div>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/1.jpg">
+</div>
 <h2>Launch of CDC Vouchers Scheme 2024 (January)</h2>
 <p></p>
 <p></p>
@@ -21,4 +37,5 @@ third_nav_title: Gallery
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_8983.jpg">
 </div>
+<p></p>
 <p></p>
