{"message":"Update file: 2024.md","userId":"93","fileName":"2024.md"}

--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -7,6 +7,16 @@ third_nav_title: Gallery
 ---
 <h2>Launch of Law Awareness Weeks @ CDC</h2>
 <h2>Launch of ArtsEverywhere@CDC</h2>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_8665.jpg">
+</div>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_8496.jpg">
+</div>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_9240.jpg">
+</div>
 <h2>Launch of CDC Vouchers Scheme 2024 (June)</h2>
 <p></p>
 <div class="isomer-image-wrapper">
