{"message":"Update file: 2024.md","userId":"93","fileName":"2024.md"}

--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -6,6 +6,10 @@ description: ""
 third_nav_title: Gallery
 ---
 <h2>Launch of Law Awareness Weeks @ CDC</h2>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/DSC01640.jpg">
+</div>
+<p></p>
 <h2>Launch of ArtsEverywhere@CDC</h2>
 <p></p>
 <div class="isomer-image-wrapper">
@@ -47,5 +51,6 @@ third_nav_title: Gallery
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_8983.jpg">
 </div>
+<p></p>
 <p></p>
 <p></p>
