--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -54,3 +54,7 @@ third_nav_title: Gallery
 <p></p>
 <p></p>
 <p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Copy_of__DSC6961.jpg">
+</div>
+<p></p>
