{"message":"Update file: 2024.md","userId":"93","fileName":"2024.md"}

--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -9,12 +9,13 @@ third_nav_title: Gallery
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/DSC01640.jpg">
 </div>
-<p></p>
-<h2>Launch of ArtsEverywhere@CDC</h2>
-<p></p>
 <div class="isomer-image-wrapper">
-<img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_8665.jpg">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Copy_of__DSC6961.jpg">
 </div>
+<p></p>
+<h2>Launch</h2>
+<h2> of ArtsEverywhere@CDC</h2>
+<p></p>
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_8496.jpg">
 </div>
@@ -54,7 +55,4 @@ third_nav_title: Gallery
 <p></p>
 <p></p>
 <p></p>
-<div class="isomer-image-wrapper">
-<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Copy_of__DSC6961.jpg">
-</div>
 <p></p>
