--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -13,8 +13,9 @@ third_nav_title: Gallery
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/Copy_of__DSC6961.jpg">
 </div>
 <p></p>
-<h2>Launch</h2>
-<h2>of ArtsEverywhere@CDC</h2>
+<h2>Launch of SkillsFuturee@CDC</h2>
+<p></p>
+<h2>Launch of ArtsEverywhere@CDC</h2>
 <p></p>
 <div class="isomer-image-wrapper">
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/IMG_8496.jpg">
