{"message":"Update file: 2024.md","userId":"93","fileName":"2024.md"}

--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -13,7 +13,14 @@ third_nav_title: Gallery
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/Copy_of__DSC6961.jpg">
 </div>
 <p></p>
-<h2>Launch of SkillsFuturee@CDC</h2>
+<h2>Launch of SkillsFuture</h2>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/skillsfuture3.jpg">
+</div>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/skillsfuture1.jpg">
+</div>
+<h2>@CDC</h2>
 <p></p>
 <h2>Launch of ArtsEverywhere@CDC</h2>
 <p></p>
