{"message":"Update file: 2024.md","userId":"93","fileName":"2024.md"}

--- a/_our-programmes/Gallery/2024.md
+++ b/_our-programmes/Gallery/2024.md
@@ -21,6 +21,9 @@ third_nav_title: Gallery
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/skillsfuture1.jpg">
 </div>
 <h2></h2>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/skillsfuture2.jpg">
+</div>
 <p></p>
 <h2>Launch of ArtsEverywhere@CDC</h2>
 <p></p>
