{"message":"Update file: 2025.md","userId":"85003","fileName":"2025.md"}

--- a/_our-programmes/Gallery/2025.md
+++ b/_our-programmes/Gallery/2025.md
@@ -43,7 +43,12 @@ third_nav_title: Gallery
 <img style="width: 100%" height="auto" width="100%" alt="" src="/images/WT_3.jpg">
 </div>
 <p></p>
-
+<h2>Launch of CDC Vouchers Scheme 2025 (May)</h2>
+<p></p>
+<div class="isomer-image-wrapper">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/CDCV_May_2025_Launch.jpg">
+</div>
+<p></p>
 <h2>Launch of CDC Vouchers Scheme 2025 (January)</h2>
 <p></p>
 <div class="isomer-image-wrapper">
