{"message":"Update file: 2025.md","userId":"85003","fileName":"2025.md"}

--- a/_our-programmes/Gallery/2025.md
+++ b/_our-programmes/Gallery/2025.md
@@ -8,13 +8,13 @@ third_nav_title: Gallery
 <h2>Launch of Jobs Nearby @ CDC</h2>
 <p></p>
 <div class="isomer-image-wrapper">
-<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Jobs\_Nearby\_CDC.jpg">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/Jobs_Nearby_CDC.jpg">
 </div>
 <div class="isomer-image-wrapper">
-<img style="width: 100%" height="auto" width="100%" alt="" src="/images/JN\_1.jpg">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/JN_1.jpg">
 </div>
 <div class="isomer-image-wrapper">
-<img style="width: 100%" height="auto" width="100%" alt="" src="/images/JN\_2.jpg">
+<img style="width: 100%" height="auto" width="100%" alt="" src="/images/JN_2.jpg">
 </div>
 <p></p>
 
